--- a/templates/plants.html
+++ b/templates/plants.html
@@ -69,6 +69,19 @@
                             <div class="col-md-6 mb-3"><label class="form-label">Origin Region</label><input type="text" id="origin-region" name="origin_region" class="form-control"></div>
                         </div>
                         
+                        <!-- Map Container -->
+                        <div id="map-container" class="mb-3" style="display: none;">
+                            <div class="map-responsive">
+                                <iframe id="origin-map"
+                                    width="100%"
+                                    height="250"
+                                    frameborder="0" style="border:0; border-radius: 0.25rem;"
+                                    src=""
+                                    allowfullscreen>
+                                </iframe>
+                            </div>
+                        </div>
+                        
                         <h6><i class="bi bi-calendar-month"></i> Monthly Climate in Origin (°C)</h6>
                         <div class="table-responsive mb-3">
                             <table class="table table-sm table-bordered text-center">
@@ -76,6 +89,11 @@
                                 <tbody id="monthly-temps-tbody">
                                     </tbody>
                             </table>
+                        </div>
+                        
+                        <!-- Climate Chart Container -->
+                        <div id="climate-chart-container" class="mb-3" style="display: none; height: 300px;">
+                            <canvas id="climate-chart"></canvas>
                         </div>
 
                         <h6><i class="bi bi-thermometer-sun"></i> Growth Periods (°C)</h6>
@@ -120,7 +138,24 @@
     </div>
 </div>
 
+<style>
+.map-responsive {
+    overflow: hidden;
+    padding-bottom: 56.25%;
+    position: relative;
+    height: 0;
+}
+.map-responsive iframe {
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+</style>
+
 <script id="server-data" type="application/json">
     {{ plants_json | safe }}
 </script>
 {% endblock %}
+
