詳細グラフの表示修正

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -55,6 +55,7 @@
     <!-- Application-specific JavaScript -->
     <script src="{{ url_for('static', filename='js/utils.js') }}"></script>
     <script src="{{ url_for('static', filename='js/dashboard.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/plant-detail.js') }}"></script>
     <script src="{{ url_for('static', filename='js/device-management.js') }}"></script>
     <script src="{{ url_for('static', filename='js/plant-library.js') }}"></script>
     <script src="{{ url_for('static', filename='js/management.js') }}"></script>
