--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,9 +8,12 @@
     <!-- Favicon Link -->
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     
+    <!-- Corrected CDN Links -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    
+    <!-- Local CSS -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body class="d-flex flex-column min-vh-100 bg-light">
 
@@ -46,11 +49,12 @@
         <p class="mb-0">&copy; 2024 Plant Dashboard</p>
     </footer>
 
-    <!-- JavaScript Libraries -->
+    <!-- Corrected JavaScript Library CDN Links -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/date-fns@2.29.3/cdn.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/3.0.1/chartjs-plugin-annotation.min.js"></script>
     
     <!-- Application-specific JavaScript -->
     <script src="{{ url_for('static', filename='js/utils.js') }}"></script>
@@ -58,6 +62,7 @@
     <script src="{{ url_for('static', filename='js/plant-detail.js') }}"></script>
     <script src="{{ url_for('static', filename='js/device-management.js') }}"></script>
     <script src="{{ url_for('static', filename='js/plant-library.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/watering-profiles.js') }}"></script>
     <script src="{{ url_for('static', filename='js/management.js') }}"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 </body>
